<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>movie-recommender</artifactId>
        <groupId>cz.fi.muni.pa165.theta</groupId>
        <version>1.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>rest</artifactId>
    <packaging>war</packaging>
    <name>rest module</name>

    <dependencies>
        <dependency>
            <groupId>cz.fi.muni.pa165.theta</groupId>
            <artifactId>api</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>cz.fi.muni.pa165.theta</groupId>
            <artifactId>services</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency> <!-- An implementation of the JSP Standard Tag Library (JSTL) Specification API.-->
            <groupId>org.apache.taglibs</groupId>
            <artifactId>taglibs-standard-spec</artifactId>
            <version>1.2.5</version>
        </dependency>
        <dependency> <!-- An implementation of the JSP Standard Tag Library (JSTL).-->
            <groupId>org.apache.taglibs</groupId>
            <artifactId>taglibs-standard-impl</artifactId>
            <version>1.2.5</version>
        </dependency>

        <!-- must provide logging implementation, this is a runnable project -->
        <!-- see viz http://docs.spring.io/platform/docs/current/reference/htmlsingle/#getting-started-logging -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
        </dependency>
        <dependency>
            <groupId>cz.fi.muni.pa165.theta</groupId>
            <artifactId>core</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-core</artifactId>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <build>
        <!-- what to do when only "mvn" is run -->
        <defaultGoal>cargo:run</defaultGoal>
        <!-- name of the produced war and the context path in URL -->
        <finalName>pa165</finalName>
        <plugins>
            <!--  embedded tomcat -->
            <plugin>
                <groupId>org.codehaus.cargo</groupId>
                <artifactId>cargo-maven3-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>